# qmk2zmk

./: CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
examples/zmk/: keymap.zmk
examples/zsa-qmk/: README.md  zsa_planck_ez_glow_aq6j5.bin.md5
examples/zsa-qmk/zsa_planck_ez_glow_planck_source/: config.h  keymap.c  rules.mk
src/: codes.rs  error.rs  io.rs  ir.rs  lib.rs  main.rs
src/parser/: mod.rs  qmk_c.rs  qmk_json.rs  zmk.rs
src/qmk/: mod.rs  parse_c.rs  parse_json.rs
src/zmk/: mod.rs  parse.rs
tests/: integration.rs
