[package]
name = "qmk2zmk"
version = "0.1.0"
edition = "2024"
description = "Convert QMK keymap files to ZMK format"

[lib]
path = "src/lib.rs"

[[bin]]
name = "qmk2zmk"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
