[package]
name = "qmk2zmk"
version = "0.5.0"
edition = "2024"
description = "Convert QMK keymap files to ZMK format"
license = "MIT"
repository = "https://github.com/patrickomatic/qmk2zmk"
keywords = ["qmk", "zmk", "convert"]
categories = ["command-line-interface", "command-line-utilities"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "qmk2zmk"
path = "src/bin/qmk2zmk.rs"

[[bin]]
name = "zmk2qmk"
path = "src/bin/zmk2qmk.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
